# ghostpost_backend

./: README.md  db.sqlite3  pyproject.toml
api/: admin.py  models.py  serializers.py  views.py
api/migrations/: 0001_initial.py  0002_auto_20201002_0310.py  0003_auto_20201002_0618.py  0004_auto_20201002_0631.py  0005_auto_20201005_1114.py
ghostpost/: settings.py  urls.py
