[tool.poetry]
name = "ghostpost_backend"
version = "0.1.0"
description = "Backend setup for GhostPost app"
authors = ["Diarte Jeffcoat <diartesjeffcoat@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.2"
djangorestframework = "^3.12.1"
django-cors-headers = "^3.5.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
